# torch-endid

./: 404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
data/: castle.csv
docs/: examples.md  index.md
examples/: index.html
nb/: benchmark.ipynb
search/: search_index.json
src/torch_endid/: __init__.py  bootstrap.py  endid.py  fitting.py  results.py  staggered.py  transforms.py
src/torch_endid/data/: castle.py
tests/: conftest.py  test_bootstrap.py  test_endid.py  test_fitting.py  test_staggered.py  test_transforms.py
