[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-endid"
version = "0.1.0"
description = "GPU-accelerated distributional difference-in-differences via engression"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-engression>=0.1.0",
    "lwdid>=0.2.3",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[tool.uv.sources]
torch-engression = { path = "../torch-engression", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/torch_endid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires CUDA GPU",
    "slow: long-running tests",
]
